--- a/tests/Makefile
+++ b/tests/Makefile
@@ -3,5 +3,5 @@ SUBDIRS=regression stress
 .PHONY: clean
 clean:
 	for dir in $(SUBDIRS) ; do \
-		make clean -C $${dir} ; \
+		$(MAKE) clean -C $${dir} ; \
 	done
