--- a/tests/regression/Makefile
+++ b/tests/regression/Makefile
@@ -3,5 +3,5 @@ SUBDIRS=apparmor
 .PHONY: clean
 clean:
 	for dir in $(SUBDIRS) ; do \
-		make clean -C $${dir} ; \
+		$(MAKE) clean -C $${dir} ; \
 	done
