--- a/tests/stress/Makefile
+++ b/tests/stress/Makefile
@@ -3,5 +3,5 @@ SUBDIRS=subdomain
 .PHONY: clean
 clean:
 	for dir in $(SUBDIRS) ; do \
-		make clean -C $${dir} ; \
+		$(MAKE) clean -C $${dir} ; \
 	done
