Update man page and default configuration for notify.conf

--- a/utils/notify.conf
+++ b/utils/notify.conf
@@ -13,3 +13,9 @@ show_notifications="yes"
 
 # Only people in use_group can use aa-notify
 use_group="admin"
+
+# OPTIONAL - custom notification message body
+# message_body="This is a custom notification message."
+
+# OPTIONAL - custom notification message footer
+# message_footer="For more information visit https://foo.com"
