comment out use_group to remove group restrictions
use_group is only honored if it is defined.

The "real" permission check is reading the logfile - the group check
in aa-notify is just an annoying additional check, and the default
"admin" only works on Ubuntu (other distributions typically use
"wheel").

This commit comments out use_group in the default config, which allows
everybody to use aa-notify. Permissions for reading the log file are of
course still needed.

References: https://bugzilla.opensuse.org/show_bug.cgi?id=1058787

--- a/utils/notify.conf
+++ b/utils/notify.conf
@@ -11,8 +11,9 @@
 # Set to 'no' to disable AppArmor notifications globally
 show_notifications="yes"
 
-# Only people in use_group can use aa-notify
-use_group="admin"
+# OPTIONAL - restrict using aa-notify to users in the given group
+# (if not set, everybody who has permissions to read the logfile can use it)
+# use_group="admin"
 
 # OPTIONAL - custom notification message body
 # message_body="This is a custom notification message."
