--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -3,6 +3,10 @@
 
 		alias /foo    ->    /bar	,
 
+@{xy}    =   y   x
+
+  @{asdf}       =   foo           ""
+
 /usr/bin/a/simple/cleanprof/test/profile {
 	# Just for the heck of it, this comment wont see the day of light
 	#include <abstractions/base>
