Add a test profile with xattrs=... to cleanprof tests

--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -67,3 +67,9 @@
 	allow /home/*/** rw,
 	allow /home/foo/bar r,
 }
+
+/what/ever/xattr   xattrs=(   foo=bar      )
+       flags=(  complain
+	   ) {
+ /what/ever r,
+ }
