Update and extend cleanprof tests for link rules

--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -53,6 +53,7 @@
 
 	pivot_root oldroot=/mnt/root/old/,
 
+	deny    owner       link       /some/thing    ->     /foo/bar    ,
 	unix shutdown addr=@HypotheticalServiceDaemon,
 
 	link subset /alpha/beta -> /tmp/**,
