tests: Allow aa_policy_cache.c to build against old libapparmors
Commit ad81ea0e671f ("tests: Add option to dump policy cache dir with
the libapparmor wrapper") modified aa_policy_cache.c to call
aa_policy_cache_dir_path_preview(). That added a hard dependency on
libapparmor >= 2.13, which is the first version to add
policy_cache_dir_path_preview() to libapparmor. The dependency makes it
impossible to build and run the upstream regression tests against an
installed libapparmor older than 2.13 due to aa_policy_cache.c failing
to build.

Add a compatible aa_policy_cache_dir_path_preview() when building
aa_policy_cache.c against a libapparmor older than 2.13 and newer than
or equal to 2.10.

Fixes: ad81ea0e671f ("tests: Add option to dump policy cache dir with the libapparmor wrapper")
Signed-off-by: Tyler Hicks <tyhicks@canonical.com>

--- a/tests/regression/apparmor/Makefile
+++ b/tests/regression/apparmor/Makefile
@@ -159,10 +159,14 @@ Install libdbus-1-dev or equivalent package to build and run these tests${nl}\
 endif
 
 TRANSITION_CFLAGS=
+AA_POLICY_CACHE_CFLAGS=
 ifdef USE_SYSTEM
   ifneq (,$(shell pkg-config --atleast-version 2.10 libapparmor && echo TRUE))
     SRC+=aa_policy_cache.c
     CONDITIONAL_TESTS+=aa_policy_cache
+    ifeq (,$(shell pkg-config --atleast-version 2.13 libapparmor && echo TRUE))
+        AA_POLICY_CACHE_CFLAGS=-DCOMPAT_PATH_PREVIEW
+    endif
   else
     $(warning ${nl}\
     ************************************************************************${nl}\
@@ -267,6 +271,9 @@ ifdef USE_SYSTEM
 else # !USE_SYSTEM
 	cp uservars.inc.source uservars.inc
 endif # USE_SYSTEM
+
+aa_policy_cache: aa_policy_cache.c
+	${CC} ${CFLAGS} ${AA_POLICY_CACHE_CFLAGS} ${LDFLAGS} $< -o $@ ${LDLIBS}
 
 at_secure: at_secure.c transition
 	${CC} ${CFLAGS} ${LDFLAGS} $< -o $@ ${LDLIBS}
