CI: cat config.log if libapparmor configure fails
This helped a lot to debug the CI failure caused by
3db14e8e49dea227b8b95f4aef47dbf505beac2d / !430, and won't add any noise
as long as configure succeeds.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build-all:
         - changehat/pam_apparmor/
         - profiles/
   script:
-      - cd libraries/libapparmor && ./autogen.sh && PYTHON=/usr/bin/python3 ./configure --with-perl --with-python --prefix=/usr && make PYTHON=/usr/bin/python3 && cd ../..
+      - cd libraries/libapparmor && ./autogen.sh && PYTHON=/usr/bin/python3 ./configure --with-perl --with-python --prefix=/usr && make PYTHON=/usr/bin/python3 && cd ../.. || { cat config.log ; exit 1 ; }
       - make -C parser
       - make -C binutils
       - make -C utils
