--- a/profiles/apparmor.d/usr.lib.dovecot.config
+++ b/profiles/apparmor.d/usr.lib.dovecot.config
@@ -28,5 +28,5 @@
   /var/lib/dovecot/ssl-parameters.dat r,
 
   # Site-specific additions and overrides. See local/README for details.
-  #include <local/usr.lib.dovecot.config>
+  include if exists <local/usr.lib.dovecot.config>
 }
