Add a 'include if exists' rule to cleanprof testcases
... to ensure it is kept.

--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -13,6 +13,8 @@
 	# Just for the heck of it, this comment wont see the day of light
 	#include <abstractions/base>
 
+#include  if  exists <foo>
+
     capability sys_admin,
     audit capability,
 
