Store and write 'include if exists' rules in the preamble
... using the new storage in ProfileList.

Also add a test rule to cleanprof.{in,out} to ensure the rule is kept.

--- a/utils/test/cleanprof_test.in
+++ b/utils/test/cleanprof_test.in
@@ -1,6 +1,9 @@
 # A simple test comment which will persist
 #include <tunables/global>
 
+#include  if  exists <tunables/nothing>
+
+
 		alias /foo    ->    /bar	,
 
 @{xy}    =   y   x
