bintutils: delete the tools on make clean
Signed-off-by: Steve Beattie <steve.beattie@canonical.com>
Acked-by: John Johansen <john.johansen@canonical.com>
https://gitlab.com/apparmor/apparmor/-/merge_requests/517

--- a/binutils/Makefile
+++ b/binutils/Makefile
@@ -168,6 +168,6 @@ endif
 clean: pod_clean
 	rm -f core core.* *.o *.s *.a *~ *.gcda *.gcno
 	rm -f gmon.out
-	rm -f $(TOOLS) $(TESTS)
+	rm -f $(BINTOOLS) $(SBINTOOLS) $(TESTS)
 	$(MAKE) -s -C po clean
 
